--- a/mockend.yml
+++ b/mockend.yml
@@ -1,6 +1,7 @@
 models:
   User:
     fake:
+    _count: 1
     cruzamentoID: { intOf: [161, 162, 163] }
     data_time_create: { dateTime: [2024-03-02T00:00:00Z, 2024-03-02T23:59:59Z] }
     hour_time_create: hour
