--- a/mockend.yml
+++ b/mockend.yml
@@ -2,5 +2,5 @@ models:
   User:
     fake:
     _count: 2
-    cruzamento_id: { int: [161, 162, 163] }
+    cruzamento_id: { int: [1, 3] }
     data_time_create: { dateTime: [2024-03-02T00:00:00Z, 2024-03-02T23:59:59Z] }
