--- a/mockend.yml
+++ b/mockend.yml
@@ -2,5 +2,5 @@ models:
   User:
     fake:
       _count: 10
-      team_1_name: firstName
+      team_1_name: { stringOf: [Vasco, Flamengo, Goias, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madri, Bangu, América, Madureira] }
       team_2_name: lastName
