--- a/mockend.yml
+++ b/mockend.yml
@@ -3,4 +3,4 @@ models:
     fake:
       _count: 10
       team_1_name: { stringOf: [Vasco, Flamengo, Goias, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madri, Bangu, América, Madureira] }
-      team_2_name: lastName
+      team_2_name: { stringOf: [Fluminense, Vitória, Bragantino, Botafogo-RP, Boca Juniors, 15 de Piracicana, Ibis, Olaria, Bangu, América, Madureira] }
