--- a/mockend.yml
+++ b/mockend.yml
@@ -2,5 +2,6 @@ models:
   User:
     fake:
       _count: 10
+      cruzamentoID: { intOf: [161, 162, 163] }
       team_1_name: { stringOf: [Vasco, Flamengo, Goias, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madri, Bangu, América, Madureira] }
       team_2_name: { stringOf: [Fluminense, Vitória, Bragantino, Botafogo-RP, Boca Juniors, 15 de Piracicana, Ibis, Olaria, Bangu, América, Madureira] }
