--- a/mockend.yml
+++ b/mockend.yml
@@ -2,7 +2,7 @@ models:
   User:
     fake:
       _count: 10
-       cruzamento_id: { intOf: [161, 162, 163] }
+       cruzamento_id: { int: [161, 162, 163] }
        data_time_create: { dateTime: [2024-03-02T00:00:00Z, 2024-03-02T23:59:59Z] }
        hour_time_create: hour
        number_tickets: { int: [10, 100] }
