--- a/mockend.yml
+++ b/mockend.yml
@@ -1,6 +1,6 @@
 models:
   User:
     fake:
-      _count: 10
-       team_1_name: { stringOf: [Vasco, Flamengo, Goias, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madri, Bangu, América, Madureira] }
-       team_2_name: { stringOf: [Fluminense, Vitória, Bragantino, Botafogo-RP, Boca Juniors, 15 de Piracicana, Ibis, Olaria, Bangu, América, Madureira] }
+      _count: 500
+      team_1_name: firstName
+      team_2_name: lastName
