--- a/mockend.yml
+++ b/mockend.yml
@@ -5,3 +5,4 @@ models:
       cruzamentoID: { intOf: [161, 162, 163] }
       team_1_name: { stringOf: [Vasco, Flamengo, Goias, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madri, Bangu, América, Madureira] }
       team_2_name: { stringOf: [Fluminense, Vitória, Bragantino, Botafogo-RP, Boca Juniors, 15 de Piracicana, Ibis, Olaria, Bangu, América, Madureira] }
+      hour_time_create: hour
