--- a/mockend.yml
+++ b/mockend.yml
@@ -3,6 +3,7 @@ models:
     fake:
       _count: 10
       cruzamentoID: { intOf: [161, 162, 163] }
+      number_tickets: { int: [10, 100] }
       team_1_name: { stringOf: [Vasco, Flamengo, Goias, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madri, Bangu, América, Madureira] }
       team_2_name: { stringOf: [Fluminense, Vitória, Bragantino, Botafogo-RP, Boca Juniors, 15 de Piracicana, Ibis, Olaria, Bangu, América, Madureira] }
       data_time_create: { dateTime: [2024-03-02T00:00:00Z, 2024-03-02T23:59:59Z] }
