--- a/mockend.yml
+++ b/mockend.yml
@@ -1,8 +1,8 @@
 models:
   User:
     fake:
-      _count: 10
-      cruzamentoID: { intOf: [161, 162, 163] }
+      _count: 5
+      cruzamentoID: { intOf: [161, 162, 163, 164, 165] }
       number_tickets: { int: [10, 100] }
       team_1_name: { stringOf: [Vasco, Flamengo, Goias, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madri, Bangu, América, Madureira] }
       team_2_name: { stringOf: [Fluminense, Vitória, Bragantino, Botafogo-RP, Boca Juniors, 15 de Piracicana, Ibis, Olaria, Bangu, América, Madureira] }
