--- a/mockend.yml
+++ b/mockend.yml
@@ -1,10 +1,17 @@
 models:
   User:
+  hasMany: [post]
     fake:
-      _count: 100
+      _count: 5
       cruzamentoID: { intOf: [161, 162, 163, 164, 165] }
-      number_tickets: { intOf: [1, 10] }
+      numbe_ticket: { intOf: [1, 10] }
       Multipla: { int: [4, 10] }
+      data_time_create: { dateTime: [2024-03-02T00:00:00Z, 2024-03-02T23:59:59Z] }
+
+Post:
+    belongsTo: [User]
+    fake:
+      _count: 25
       team_1_name: { stringOf: [Vasco, Flamengo, Goias, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madri, Bangu, América, Madureira] }
       team_2_name: { stringOf: [Fluminense, Vitória, Bragantino, Botafogo-RP, Boca Juniors, 15 de Piracicana, Ibis, Olaria, Bangu, América, Madureira] }
       data_time_create: { dateTime: [2024-03-02T00:00:00Z, 2024-03-02T23:59:59Z] }
