--- a/mockend.yml
+++ b/mockend.yml
@@ -4,7 +4,7 @@ models:
     fake:
       _count: 100
       cruzamentoID: { intOf: [161, 162, 163, 164, 165] }
-      numbe_ticket: { intOf: [1, 10] }
+      number_ticket: { intOf: [1, 10] }
       Multipla: { int: [4, 10] }
       team_1_name: { stringOf: [Vasco, Flamengo, Goias, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madri, Bangu, América, Madureira] }
       team_2_name: { stringOf: [Fluminense, Vitória, Bragantino, Botafogo-RP, Boca Juniors, 15 de Piracicana, Ibis, Olaria, Bangu, América, Madureira] }
