--- a/mockend.yml
+++ b/mockend.yml
@@ -4,8 +4,9 @@ models:
     fake:
       _count: 100
       cruzamentoID: { intOf: [161, 162, 163, 164, 165] }
-      number_ticket: { intOf: [1, 10] }
+      number_ticket: { intOf: [1, 100] }
       Multipla: { int: [4, 10] }
+      number_game: { intOf: [1, 10] }
       team_1_name: { stringOf: [Vasco, Flamengo, Goias, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madri, Bangu, América, Madureira] }
       team_2_name: { stringOf: [Fluminense, Vitória, Bragantino, Botafogo-RP, Boca Juniors, 15 de Piracicana, Ibis, Olaria, Bangu, América, Madureira] }
       data_time_create: { dateTime: [2024-03-02T00:00:00Z, 2024-03-02T23:59:59Z] }
