--- a/mockend.yml
+++ b/mockend.yml
@@ -2,16 +2,18 @@ key: userkey123
 models:
   User:
     data: [{ cruzamentoID: '161' }]
+    data: [{ number_ticket: '01' }]
+    fake:
+    data_create: { dateTime: [2024-03-02T00:00:00Z, 2024-03-02T23:59:59Z] }
+    Multipla: { int: [4, 10] }
+    odd_Max: { int: [22, 70] }
     fake:
       _count: 10
-      number_ticket: { intOf: [1, 100] }
-      Multipla: { int: [4, 10] }
       number_game: { intOf: [1, 10] }
       team_1_name: { stringOf: [Vasco, Flamengo, Goias, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madri, Bangu, América, Madureira] }
       team_2_name: { stringOf: [Fluminense, Vitória, Bragantino, Botafogo-RP, Boca Juniors, 15 de Piracicana, Ibis, Olaria, Bangu, América, Madureira] }
       data_create: { dateTime: [2024-03-02T00:00:00Z, 2024-03-02T23:59:59Z] }
       odd_result: { floatOf: [1.1, 1.4, 1.8, 1.9, 2.0, 2.2, 2.4, 2.8, 3.0, 3.1, 3.3, 3.7] }
       result_odd: { stringOf: [Empate, Empate, Empate, Vasco, Flamengo, Goias, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madri, Bangu, América, Madureira, Fluminense, Vitória, Bragantino, Botafogo-RP, Boca Juniors, 15 de Piracicana, Ibis, Olaria, Bangu, América, Madureira] }
-      odd_Max: { int: [22, 70] }
       hour_game: { stringOf: [10:00, 11:00, 12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00, 21:00, 22:00] }
       league: { stringOf: [Brasileirão, Libertadores, Copa do Brasil, Champions League, Copa Del Rey, Carioca, Paulistão, Copa do Mundo] }
