--- a/mockend.yml
+++ b/mockend.yml
@@ -1,6 +1,6 @@
 key: userkey123
 models:
-  User:
+  Psot:
     data: [{ cruzamentoID: '161' }, { number_ticket: '01' }]
         fake:
       _count: 10
