--- a/mockend.yml
+++ b/mockend.yml
@@ -1,7 +1,8 @@
 models:
   User:
+  data: [{ title: 'Title 1' }, { title: 'Title 2' }]
     fake:
-      _count: 100
+      _count: 10
       cruzamentoID: { intOf: [161, 162, 163, 164, 165] }
       numbe_ticket: { intOf: [1, 10] }
       Multipla: { int: [4, 10] }
