--- a/mockend.yml
+++ b/mockend.yml
@@ -3,14 +3,16 @@ models:
     belongsTo: [User]
     hasMany: [Comment]
     fake:
-      _count: 20
+      _count: 30
       odd_Max: { int: [22, 70] }
       Multipla: { int: [4, 10] }
+      number_ticket: { intOf: [161, 162, 163, 164, 165] }
  
   Comment:
     belongsTo: [Post]
     fake:
-      _count: 20
+      _count: 10
+      number_aposta: { intOf: [161, 162, 163, 164, 165] }
       team_1_name: { stringOf: [Vasco, Flamengo, Goias, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madri, Bangu, América, Madureira] }
       team_2_name: { stringOf: [Fluminense, Vitória, Bragantino, Botafogo-RP, Boca Juniors, 15 de Piracicana, Ibis, Olaria, Bangu, América, Madureira] }
       odd_result: { floatOf: [1.1, 1.4, 1.8, 1.9, 2.0, 2.2, 2.4, 2.8, 3.0, 3.1, 3.3, 3.7] }
