--- a/mockend.yml
+++ b/mockend.yml
@@ -22,8 +22,8 @@ models:
  
   User:
     hasMany: [Post]
+    data: [{ cruzamentoID: '161' }, { cruzamentoID: '162' }, { cruzamentoID: '163' }, { cruzamentoID: '164' }, { cruzamentoID: '165' }]
     fake:
       _count: 5
-      cruzamentoID: { intOf: [161, 162, 163, 164, 165] }
       data_time_create: { dateTime: [2024-03-02T00:00:00Z, 2024-03-02T23:59:59Z] }
 
