--- a/mockend.yml
+++ b/mockend.yml
@@ -13,7 +13,7 @@ models:
     fake:
       _count: 300
       aposta_cruzamentoID: { intOf: [161, 162, 163, 164, 165] }
-      aposta_ticketID:  { int: [1, 100] }
+      aposta_cruzamentoID: { int: [1, 100] }
       team_1_name: { stringOf: [Vasco, Flamengo, Goias, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madri, Bangu, América, Madureira] }
       team_2_name: { stringOf: [Fluminense, Vitória, Bragantino, Botafogo-RP, Boca Juniors, 15 de Piracicana, Ibis, Olaria, Bangu, América, Madureira] }
       odd_result: { floatOf: [1.1, 1.4, 1.8, 1.9, 2.0, 2.2, 2.4, 2.8, 3.0, 3.1, 3.3, 3.7] }
