--- a/mockend.yml
+++ b/mockend.yml
@@ -1,37 +1,15 @@
 models:
   User:
-   data: [{ cruzamentoID: '161' }, { data_time_create: '2024-03-02T21:10:59Z' }]
-         fake:
-      _count: 100
-      odd_Max: { int: [22, 70] }
+    fake:
+      _count: 10
+      cruzamentoID: { intOf: [161, 162, 163, 164, 165] }
+      numbe_ticket: { intOf: [1, 10] }
       Multipla: { int: [4, 10] }
       team_1_name: { stringOf: [Vasco, Flamengo, Goias, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madri, Bangu, América, Madureira] }
       team_2_name: { stringOf: [Fluminense, Vitória, Bragantino, Botafogo-RP, Boca Juniors, 15 de Piracicana, Ibis, Olaria, Bangu, América, Madureira] }
+      data_time_create: { dateTime: [2024-03-02T00:00:00Z, 2024-03-02T23:59:59Z] }
       odd_result: { floatOf: [1.1, 1.4, 1.8, 1.9, 2.0, 2.2, 2.4, 2.8, 3.0, 3.1, 3.3, 3.7] }
       result_odd: { stringOf: [Empate, Empate, Empate, Vasco, Flamengo, Goias, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madri, Bangu, América, Madureira, Fluminense, Vitória, Bragantino, Botafogo-RP, Boca Juniors, 15 de Piracicana, Ibis, Olaria, Bangu, América, Madureira] }
+      odd_Max: { int: [22, 70] }
       hour_game: { stringOf: [10:00, 11:00, 12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00, 21:00, 22:00] }
       league: { stringOf: [Brasileirão, Libertadores, Copa do Brasil, Champions League, Copa Del Rey, Carioca, Paulistão, Copa do Mundo] }
-      odd_Max2: { int: [22, 70] }
-      Multipla2: { int: [4, 10] }
-      team_1_name2: { stringOf: [Vasco, Flamengo, Goias, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madri, Bangu, América, Madureira] }
-      team_2_name2: { stringOf: [Fluminense, Vitória, Bragantino, Botafogo-RP, Boca Juniors, 15 de Piracicana, Ibis, Olaria, Bangu, América, Madureira] }
-      odd_result2: { floatOf: [1.1, 1.4, 1.8, 1.9, 2.0, 2.2, 2.4, 2.8, 3.0, 3.1, 3.3, 3.7] }
-      result_odd2: { stringOf: [Empate, Empate, Empate, Vasco, Flamengo, Goias, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madri, Bangu, América, Madureira, Fluminense, Vitória, Bragantino, Botafogo-RP, Boca Juniors, 15 de Piracicana, Ibis, Olaria, Bangu, América, Madureira] }
-      hour_game2: { stringOf: [10:00, 11:00, 12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00, 21:00, 22:00] }
-      league2: { stringOf: [Brasileirão, Libertadores, Copa do Brasil, Champions League, Copa Del Rey, Carioca, Paulistão, Copa do Mundo] }
-      odd_Max3: { int: [22, 70] }
-      Multipla3: { int: [4, 10] }
-      team_1_name3: { stringOf: [Vasco, Flamengo, Goias, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madri, Bangu, América, Madureira] }
-      team_2_name3: { stringOf: [Fluminense, Vitória, Bragantino, Botafogo-RP, Boca Juniors, 15 de Piracicana, Ibis, Olaria, Bangu, América, Madureira] }
-      odd_result3: { floatOf: [1.1, 1.4, 1.8, 1.9, 2.0, 2.2, 2.4, 2.8, 3.0, 3.1, 3.3, 3.7] }
-      result_odd3: { stringOf: [Empate, Empate, Empate, Vasco, Flamengo, Goias, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madri, Bangu, América, Madureira, Fluminense, Vitória, Bragantino, Botafogo-RP, Boca Juniors, 15 de Piracicana, Ibis, Olaria, Bangu, América, Madureira] }
-      hour_game3: { stringOf: [10:00, 11:00, 12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00, 21:00, 22:00] }
-      league3: { stringOf: [Brasileirão, Libertadores, Copa do Brasil, Champions League, Copa Del Rey, Carioca, Paulistão, Copa do Mundo] }
-      odd_Max4: { int: [22, 70] }
-      Multipla4: { int: [4, 10] }
-      team_1_name4: { stringOf: [Vasco, Flamengo, Goias, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madri, Bangu, América, Madureira] }
-      team_2_name4: { stringOf: [Fluminense, Vitória, Bragantino, Botafogo-RP, Boca Juniors, 15 de Piracicana, Ibis, Olaria, Bangu, América, Madureira] }
-      odd_result4: { floatOf: [1.1, 1.4, 1.8, 1.9, 2.0, 2.2, 2.4, 2.8, 3.0, 3.1, 3.3, 3.7] }
-      result_odd4: { stringOf: [Empate, Empate, Empate, Vasco, Flamengo, Goias, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madri, Bangu, América, Madureira, Fluminense, Vitória, Bragantino, Botafogo-RP, Boca Juniors, 15 de Piracicana, Ibis, Olaria, Bangu, América, Madureira] }
-      hour_game4: { stringOf: [10:00, 11:00, 12:00, 13:00, 14:00, 15:00, 16:00, 17:00, 18:00, 19:00, 20:00, 21:00, 22:00] }
-      league4: { stringOf: [Brasileirão, Libertadores, Copa do Brasil, Champions League, Copa Del Rey, Carioca, Paulistão, Copa do Mundo] }
