--- a/mockend.yml
+++ b/mockend.yml
@@ -2,11 +2,11 @@ models:
   User:
     fake:
       _count: 300
-      team_1_name: firstName
-      team_2_name: lastName
-      team_1_odd: { int: [1, 10] }
-      draw_odd: { int: [1, 10] }
-      team_2_odd: { int: [1, 10] }
+      team_1_name: { stringOf: [Vasco, Flamengo, Goiás, Barcelona, Botafogo, São Paulo, Olympiacos, Real Madrid, Bangu, América, Madureira, Liverpool, Juventus, Chelsea, Arsenal, Borussia Dortmund, Paris Saint-Germain, Manchester City, Atlético Madrid, Inter Milan, AC Milan, Benfica, Porto, Ajax, River Plate, Boca Juniors, Corinthians, Palmeiras, Flamengo, Santos] }
+      team_2_name: { stringOf: [Celtic, Rangers, Sevilla, Valencia, Napoli, Lazio, Roma, Bayer Leverkusen, RB Leipzig, Monaco, Marseille, Lyon, Galatasaray, Fenerbahçe, Besiktas, Shakhtar Donetsk, Zenit Petersburgo, CSKA Moscou, Club Brugge, Anderlecht, PSV Eindhoven, Feyenoord, Grêmio, Internacional, Atlético Mineiro, Cruzeiro, Tigres UANL, Club América, LA Galaxy, New York City FC] }
+      team_1_odd: { floatOf: [2.3, 1.5, 4.8, 3.7, 5.2, 6.9, 7.4, 8.1, 9.2, 1.6, 2.4, 3.3, 4.7, 5.5, 6.8, 7.1, 8.9, 9.2, 1.3, 2.5, 3.6, 4.2, 5.7, 6.1, 7.8, 8.4, 9.3, 1.9, 2.2, 3.4] }
+      draw_odd: { floatOf: [2.3, 1.5, 4.8, 3.7, 5.2, 6.9, 7.4, 8.1, 9.2, 1.6, 2.4, 3.3, 4.7, 5.5, 6.8, 7.1, 8.9, 9.2, 1.3, 2.5, 3.6, 4.2, 5.7, 6.1, 7.8, 8.4, 9.3, 1.9, 2.2, 3.4] }
+      team_2_odd: { floatOf: [2.3, 1.5, 4.8, 3.7, 5.2, 6.9, 7.4, 8.1, 9.2, 1.6, 2.4, 3.3, 4.7, 5.5, 6.8, 7.1, 8.9, 9.2, 1.3, 2.5, 3.6, 4.2, 5.7, 6.1, 7.8, 8.4, 9.3, 1.9, 2.2, 3.4] }
       team_1_logo: { imageURL: [32, 32] }
       team_2_logo: { imageURL: [32, 32] }
       zone: country
